--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "exif-parser": "^0.1.12",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.6",
     "tsx": "^4.17.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.3.0",
+    "@types/validator": "^13.12.0",
     "typescript": "^5.5.4"
   }
 }
