--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "outDir": "./dist",      
     "esModuleInterop": true,            
     "strict": true,
-    "skipLibCheck": true  
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
   }
 }
