--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "dotenv": "^16.4.5",
     "exif-parser": "^0.1.12",
     "express": "^4.19.2",
@@ -22,10 +23,12 @@
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
-    "tsx": "^4.17.0"
+    "tsx": "^4.17.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/ioredis": "^4.28.10",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.3.0",
     "@types/validator": "^13.12.0",
